Implement game resignation feature and board flipping; enhance piece rendering with sprite support

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,10 @@
       </div>
       <div class="moves-header">Ходы</div>
       <div id="move-list" class="move-list"></div>
+      <div class="game-actions">
+        <button type="button" class="btn-flip" id="btn-flip-board">Повернуть доску</button>
+        <button type="button" class="btn-resign" id="btn-resign">Сдаться</button>
+      </div>
     </section>
 
     <!-- Ожидание в очереди -->
